2013-02-02  Carl Hetherington  <cth@carlh.net>

	* Fix infinite loop of error messages when
	`playing back' using a non-existant filter (#39).

	* Encode data straight to MXFs, rather
	than going via .j2c files.  Should roughly
	halve required disk space and reduce time
	taken.

2013-01-25  Carl Hetherington  <cth@carlh.net>

	* When using formats which pad smaller frames into
	larger ones, the padding black now shown in
	the preview.

	* Fix the old DCP content type being left behind
	when creating a new film.

	* Add option to specify default details
	for the DCI name details dialog in new
	Films (#42).

2013-01-24  Carl Hetherington  <cth@carlh.net>

	* Version 0.72 released.

2013-01-24  Carl Hetherington  <cth@carlh.net>

	* Version 0.71 released.

2013-01-24  Carl Hetherington  <cth@carlh.net>

	* Fix lack of audio with trimmed DCPs.

2013-01-23  Carl Hetherington  <cth@carlh.net>

	* Remove multi-reel support (for now); needs more thinking about
	and testing.

2013-01-12  Carl Hetherington  <cth@carlh.net>

	* Version 0.71beta2 released.

2013-01-12  Carl Hetherington  <cth@carlh.net>

	* Version 0.71beta1 released.

2013-01-12  Carl Hetherington  <cth@carlh.net>

	* Untested support for splitting DCPs
	into multiple reels.

2013-01-09  Carl Hetherington  <cth@carlh.net>

	* Try to build with 0.10.4-ish ffmpeg.

2013-01-07  Carl Hetherington  <cth@carlh.net>

	* Version 0.70 released.

2013-01-07  Carl Hetherington  <cth@carlh.net>

	* Fix heinous thinko in mono soundtrack mapping code.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Version 0.70beta3 released.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Postpone linking of duplicate video frames so that copies
	don't fail on Windows.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Version 0.70beta2 released.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Version 0.70beta1 released.

2013-01-06  Carl Hetherington  <cth@carlh.net>

	* Put mono soundtracks on the centre speaker, rather